# internal/domain/models/response/response.go
@@ -3,9 +3,9 @@ package response
 type (
 	Error struct {
 		Error string `json:"error"`
-	} // @name ResponseError
+	} // @name Error
 
 	Success struct {
 		Data interface{} `json:"data"`
-	} // @name ResponseSuccess
+	} // @name Success
 )
